<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.societtee.Login"
    android:background="@android:color/transparent"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/societtee_logo"
            android:layout_gravity="center"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp">

       <!-- <Spinner
            android:id="@+id/society_name_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary">

        </Spinner>-->
        <AutoCompleteTextView
            android:id="@+id/society_name_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="owner1"
            android:paddingLeft="10dp"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:text="1234"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:paddingLeft="10dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="normal"
            />


        <TextView
            android:id="@+id/forgot_password_textview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="15sp"/>
    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
