<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.societtee.FrogotPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/check_mark"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/valid_email_text"
                android:textAlignment="center"
                android:textStyle="normal"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:inputType="text"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:paddingLeft="10dp"/>



            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
